--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href='style.css' />
   </head>
   <body>
-
+    <nike-shoe></nike-shoe>
 
     <script src='app.js'></script>
-    <script type='module' src='components/nike.js'></script>
+    <!-- <script type='module' src='nike.js'></script> -->
   </body>
 </html>
