problemas en el componente, arreglar mas tarde

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <nike-shoe></nike-shoe>
 
     <script src='app.js'></script>
-    <!-- <script type='module' src='nike.js'></script> -->
+    <script type='module' src='component/nike.js'></script>
   </body>
 </html>
