--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <nike-shoe></nike-shoe>
 
-    <script src='app.js'></script>
-    <script type='module' src='component/nike.js'></script>
+    <script type='module' src='app.js'></script>
   </body>
 </html>
