--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <nike-shoe></nike-shoe>
+    <nike-shoe title='xd'></nike-shoe>
 
     <script type='module' src='app.js'></script>
   </body>
